# batch_proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.org  docker-compose.yaml  flake.nix  settings.toml
src/: api_client.rs  batch.rs  config.rs  main.rs  request.rs  settings.rs
src/api/: api_batch_executor.rs  api_data_provider.rs  client.rs  endpoint.rs  mod.rs
src/api/client/: reqwest_api_client.rs
src/api/endpoint/: embed_endpoint.rs
src/batch/: batch_executor.rs  batch_manager.rs  batch_managerv2.rs  batch_worker.rs  batch_workerv2.rs  data_provider.rs  mod.rs  request_executor.rs  request_store.rs
