[package]
name = "batch_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
config = "0.15.13"
env_logger = "0.11.8"
log = "0.4.27"
reqwest =  { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0.142"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7.16"
uuid = { version = "1.17.0", features = [ "v4" ] }
